--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.1.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "glob-parent": ">=5.1.2",
     "webpack": "^4.42.1"
   },
   "dependencies": {
